force-app/main/default/objects/Travel_Approval__c/fields/Flight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Flight_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flight Cost?</label>
    <type>Checkbox</type>
</CustomField>