force-app/main/default/objects/Travel_Approval__c/fields/Is_Visa_Applied__c.field-meta.xml
<CustomField>
    <fullName>Is_Visa_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Visa Applied?</label>
    <type>Checkbox</type>
</CustomField>