force-app/main/default/objects/Travel_Approval__c/fields/Number_of_Bags__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bags__c</fullName>
    <label>Number of Bags</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>