force-app/main/default/objects/Travel_Approval__c/fields/Traveler_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Traveler_s_Email__c</fullName>
    <label>Traveler’s Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>