force-app/main/default/objects/Travel_Approval__c/fields/Travelling_From__c.field-meta.xml
<CustomField>
    <fullName>Travelling_From__c</fullName>
    <label>Travelling From</label>
    <type>Date</type>
</CustomField>